Bug 203589 - Crash in the noise reduction tool when 'Threshold' equals zero.
Summary: Crash in the noise reduction tool when 'Threshold' equals zero.
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Plugin-Editor-NoiseReduction (other bugs)
Version First Reported In: 1.0.0
Platform: Gentoo Packages Linux
: NOR crash
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-08-12 18:07 UTC by Igor Krivenko
Modified: 2018-02-05 12:21 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Igor Krivenko 2009-08-12 18:07:23 UTC
Version:           1.0.0 beta 3 (using KDE 4.2.4)
Compiler:          gcc (Gentoo 4.3.2-r3 p1.6, pie-10.1.5) 
OS:                Linux
Installed from:    Gentoo Packages

It's possible to set 'Threshold' parameter to zero in the noise reduction plugin. The crash can be reproduced by doing so and pushing 'Try' button (it doesn't occur with 'OK' button).

Perhaps, it would be better to set the lower limit of the threshold to a small positive number, because zero here is quite senseless.
Comment 1 caulier.gilles 2009-08-14 11:56:30 UTC
It's an easy file to solve. Somebody is volunteer ? Andi, Julien ?

Gilles Caulier
Comment 2 Andi Clemens 2009-08-14 12:39:13 UTC
Not crashing here, but I can change the minimum val to 0.01 for sure...
Comment 3 Andi Clemens 2009-08-14 12:43:25 UTC
SVN commit 1011324 by aclemens:

set the minimum value for the threshold to 0.01

BUG:203589

 M  +1 -1      noisereductiontool.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1011324