set the minimum value for the threshold to 0.01

BUG:203589

svn path=/trunk/extragear/graphics/digikam/; revision=1011324